# ntexecg

./: .env.example  .env.test  .gitattributes  .gitignore  README.md  VALIDACION_LIMITES.md  alembic.ini  pyproject.toml
A REVISAR/: LEEME.txt
CONTRATO/: 00_NTEXECG_CONTRATO_TECNICO_v1_0.md  01_REQUERIMIENTOS_ACCIONABLES_v1_0.md  02_REQUERIMIENTOS_INTERFACE_WEB_v1_0.md  03_ARQUITECTURA_ESTRUCTURA_v1_0.md  04_MODELO_DATOS_v1_0.md  05_BACKLOG_ROADMAP_v1_0.md  06_PROMPTS_CLAUDE_CODE_v1_0.md  07_INFRAESTRUCTURA_ENTORNOS_v1_0.md  08_ADECUACIONES_ESTRATEGIAS_ACTIVOS_v1_0.md  09_ADECUACIONES_DATOS_REGIMEN_RESULTADOS_v1_0.md  10_ADECUACIONES_TRADERSPOST_DISPATCH_v1_0.md  11_CALIBRACION_SL_ATR_ES_v1_0.md  12_REGIMEN_DIRECCION_ES_v1_0.md  13_EVALUACION_QUALITYSCORER_ES_v1_0.md  14_ENTRADA_ESCALONADA_ATR_ES_v1_0.md  15_METODOLOGIA_CALIBRACION_INSTRUMENTOS_v1_0.md  16_CALIBRACION_8_INSTRUMENTOS_ATR_REAL_v1_0.md  17_SIMULACION_SL_MATRIZ_DECISION_v1_0.md  18_COMPRA_ESCALONADA_NIVELES_ATR_v1_0.md  18b_TABLAS_COMPLETAS_compra_escalonada.md  19_SIZING_microcontratos_por_nivel_v1_0.md  20_POLITICA_OPERATIVA_FINAL_v1_0.md  ANALISIS_Fable_Luxy_Auditoria_2026-07-10.md  ANALISIS_Listas_2026-07-18.md  AUDITORIA_Despacho_E2E_2026-07-15.md  AUDITORIA_FINAL_2026-07-19.md  AUDITORIA_Fable_Cierre_2026-07-12.md  AUDITORIA_Sintesis_Mision_2026-07-07.md  AUDITORIA_TOTAL_Fable5_2026-07-12.md  AUDITORIA_Total_Luxy_FixtureOro_2026-07-18.md  Anexo_21_Filtros_Calidad.md  Anexo_21_eval_output.txt  Anexo_22_NTEXECG_vs_LuxAlgo.md  Anexo_23_Calibracion_9_nuevas.md  Anexo_24_Playbook_Alta_por_Instrumento.md  Anexo_25_Bateria_Pruebas_Filtros.md  Auditoria_FaseA_2026-07-06.md  CONTRATO_Trabajo_Vivo_2026-07-07.md  Convencion_Export_LuxAlgo.md  FIX_D3_Cancelacion_Piernas_2026-07-16.md  (+59 more)
DOCS/: PASOS PARA CREAR UNA ALERTA LUXALGO&TRADERSPOST.docx  resultados_semanales_PLANTILLA.csv
(+388 files in other folders)
