[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ntexecg"
version = "1.0.0"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "loguru>=0.7.2",
    "apscheduler>=3.10.4",
    "python-dateutil>=2.9.0",
    "pytz>=2024.1",
    "yfinance>=0.2.40",
    "pandas>=2.2.0",
    "pandas-ta>=0.3.14b",
    "beautifulsoup4>=4.12.0",
    "requests>=2.32.0",
    "bcrypt>=4.1.0",
    "pyjwt>=2.8.0",
    # Motor de Riesgo: heatmap.png es producto (lo sirve la pestaña Riesgo);
    # en el extra opcional el server lo omitía en silencio (P1-3, auditoría).
    "matplotlib>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.3.0",
    "aiosqlite>=0.20.0",
]
phase6 = [
    "hmmlearn>=0.3.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
]
# (matplotlib movido a dependencias principales — P1-3 de la auditoría:
# el heatmap es producto vía la pestaña Riesgo, no un extra)

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Test and its async fixtures share ONE event loop per test function, so the
# per-test async engine is created and disposed on the same loop (no teardown
# against a closed loop, no lingering aiosqlite worker thread).
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["app/db/migrations/*"]
